# sim-enums-workspace

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
core/: Cargo.toml
core/src/: lib.rs
simulator/: Cargo.toml
simulator/src/: lib.rs
user/: Cargo.toml
user/src/: lib.rs
