[package]
name = "core"
version = "0.0.1"
edition = "2021"
authors = ["Rahul Kumar <rahulkumar@berkeley.edu>"]
description = "Structures for strongly-typed circuit simulator inputs and outputs"
readme = "../README.md"
repository = "https://github.com/rahulk29/sim-enums2"
license = "BSD-3-Clause"

[dependencies]
